[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Themes/lexend_menu_title.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Themes/lexend_menu_regular_text.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/game_setup/game_setup.gd" type="Script" id=3]

[node name="Node2D" type="Spatial"]
script = ExtResource( 3 )

[node name="game_setup_menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_title" type="Label" parent="game_setup_menu"]
margin_left = 281.35
margin_top = 8.32446
margin_right = 668.35
margin_bottom = 88.3245
theme = ExtResource( 1 )
text = "Game Setup"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_back" type="Button" parent="game_setup_menu"]
margin_left = 431.682
margin_top = 354.384
margin_right = 501.682
margin_bottom = 390.384
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrl_user_select" type="Control" parent="game_setup_menu"]
margin_left = 648.0
margin_top = 132.0
margin_right = 996.0
margin_bottom = 466.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrl_map_selection" type="Control" parent="game_setup_menu"]
margin_left = 292.0
margin_top = 97.0
margin_right = 665.0
margin_bottom = 327.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_start" type="Button" parent="game_setup_menu/ctrl_map_selection"]
margin_left = 139.137
margin_top = 177.192
margin_right = 209.137
margin_bottom = 213.192
theme = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list_maps" type="OptionButton" parent="game_setup_menu/ctrl_map_selection"]
margin_left = 75.9675
margin_top = 92.2692
margin_right = 318.967
margin_bottom = 139.269
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_maps" type="Label" parent="game_setup_menu/ctrl_map_selection"]
margin_left = 114.164
margin_top = 35.6762
margin_right = 243.164
margin_bottom = 65.6762
theme = ExtResource( 2 )
text = "Select Map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrl_online" type="Control" parent="game_setup_menu"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_online" type="Label" parent="game_setup_menu/ctrl_online"]
margin_left = 61.0
margin_top = 121.0
margin_right = 148.0
margin_bottom = 151.0
theme = ExtResource( 2 )
text = "Online"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_online_host" type="Button" parent="game_setup_menu/ctrl_online"]
margin_left = 68.796
margin_top = 163.184
margin_right = 138.796
margin_bottom = 199.184
theme = ExtResource( 2 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_online_join" type="Button" parent="game_setup_menu/ctrl_online"]
margin_left = 68.796
margin_top = 251.184
margin_right = 138.796
margin_bottom = 287.184
theme = ExtResource( 2 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="le_ipv4" type="LineEdit" parent="game_setup_menu/ctrl_online"]
margin_left = 27.0
margin_top = 297.0
margin_right = 260.0
margin_bottom = 337.0
hint_tooltip = "IPv4 Address"
theme = ExtResource( 2 )
text = "127.0.0.1"
placeholder_text = "IP Address of Host"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="game_setup_menu/btn_back" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="game_setup_menu/ctrl_map_selection/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="game_setup_menu/ctrl_online/btn_online_host" to="." method="_on_btn_online_host_pressed"]
[connection signal="pressed" from="game_setup_menu/ctrl_online/btn_online_join" to="." method="_on_btn_online_join_pressed"]
